# telcoChurn

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: model.pkl
src/: app.py  data.py  predict.py  train.py
tests/: test_app.py
