[project]
name = "telcochurn"
version = "0.1.0"
description = ""
authors = [
    {name = "pandelis-giankulidis",email = "pantelis.giankoulidis+1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "mlflow (>=3.4.0,<4.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "dvc (>=3.63.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "telcochurn", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
